Fix a layout issue on the location page

--- a/views/app.scss
+++ b/views/app.scss
@@ -167,20 +167,22 @@ aside {
 
 #location {
   @include full($total-cols);
+  $cols: 4;
   article {
     @include columns(6, $total-cols);
   }
-  iframe {
-    @include columns(4, $total-cols);
+  .map {
+    @include columns($cols, $total-cols);
     @include omega($total-cols);
     margin-top: scale(2);
+  }
+  iframe {
+    @include full($cols);
+    width: 100%;
     outline: 1px solid $color1;
   }
   small {
-    @include columns(4, $total-cols);
-    @include omega($total-cols);
-    margin-top: scale(-4);
-    text-align: center;
+    @include full($cols);
   }
 }
 
